<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/first"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gris"
    android:orientation="vertical"
    tools:context="FirstScreen">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="vertical">

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtSign"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40sp"
            android:layout_marginEnd="40sp"
            android:layout_marginBottom="30dp"
            android:fontFamily="@font/alfa_slab_one"
            android:gravity="center_horizontal"
            android:text="@string/Sign"
            android:textColor="@color/negro"
            android:textSize="40sp"
            android:typeface="normal" />

        <EditText
            android:id="@+id/txt_name"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/editext_rounded_border"
            android:fontFamily="@font/slabo_13px"
            android:hint="@string/Hint_nombre"
            android:paddingStart="10dp"
            android:textSize="25sp"
            tools:ignore="RtlSymmetry">

        </EditText>

        <EditText
            android:id="@+id/txt_lastname"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/editext_rounded_border"
            android:fontFamily="@font/slabo_13px"
            android:hint="@string/Hint_apellido"
            android:paddingStart="10dp"
            android:textSize="25sp"
            tools:ignore="RtlSymmetry">

        </EditText>

        <EditText
            android:id="@+id/txt_number"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/editext_rounded_border"
            android:fontFamily="@font/slabo_13px"
            android:hint="@string/Hint_number"
            android:paddingStart="10dp"
            android:textSize="25sp"
            tools:ignore="RtlSymmetry">

        </EditText>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_sign"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_background"
                android:text="@string/entrar"
                android:textAllCaps="false">

            </Button>
        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2">

    </LinearLayout>

</LinearLayout>